--- a/PhantasmaMail/PhantasmaMail/Controls/WalletAssetCell.xaml
+++ b/PhantasmaMail/PhantasmaMail/Controls/WalletAssetCell.xaml
@@ -25,6 +25,7 @@
                 <ColumnDefinition Width="1*"/>
                 <ColumnDefinition Width="1*"/>
             </Grid.ColumnDefinitions>
+
             <ffimageloading:CachedImage Grid.Column="0"
                                         Margin="5"
                                         Grid.Row="0"
@@ -36,7 +37,7 @@
                                         HeightRequest="35"
                                         Aspect="AspectFill">
                 <ffimageloading:CachedImage.Transformations>
-                    <transformations:CircleTransformation />
+                    <transformations:CircleTransformation  BorderHexColor="#17566B" BorderSize="4"/>
                 </ffimageloading:CachedImage.Transformations>
             </ffimageloading:CachedImage>
 
@@ -45,7 +46,6 @@
 
             <Label Grid.Row="0" Grid.Column="2" HorizontalTextAlignment="End"  Margin="5,5,10,0"
                    Text="{Binding FiatValue}"/>
-
 
             <Label Grid.Row="1" Grid.Column="1" HorizontalTextAlignment="Start" Margin="10,5,5,5"
                    Text="{Binding Amount}"/>
