--- a/PhantasmaMail/PhantasmaMail/Views/Wallet/TransactionHistoryView.xaml
+++ b/PhantasmaMail/PhantasmaMail/Views/Wallet/TransactionHistoryView.xaml
@@ -25,7 +25,7 @@
                         SelectionMode="Single"
                         SelectedItem="{Binding SelectedTransaction}"
                         AllowSwiping="False"
-                        IsStickyHeader="True"
+                        IsStickyHeader="False"
                         ItemSpacing="15"
                         VerticalOptions="FillAndExpand">
                         
