--- a/PhantasmaMail/PhantasmaMail/Views/Wallet/WalletView.xaml
+++ b/PhantasmaMail/PhantasmaMail/Views/Wallet/WalletView.xaml
@@ -56,6 +56,7 @@
 
 
             <Frame Grid.Row="0"
+                   CornerRadius="0"
                    Margin="20,30,20,0">
                 <StackLayout HorizontalOptions="FillAndExpand">
                     <Label Text="Current Balance" 
