--- a/PhantasmaMail/PhantasmaMail/Views/Wallet/SendView.xaml
+++ b/PhantasmaMail/PhantasmaMail/Views/Wallet/SendView.xaml
@@ -4,6 +4,8 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:xfx="clr-namespace:Xfx;assembly=Xfx.Controls"
              xmlns:xForms="clr-namespace:Syncfusion.SfPicker.XForms;assembly=Syncfusion.SfPicker.XForms"
+             xmlns:fftransformations="clr-namespace:FFImageLoading.Transformations;assembly=FFImageLoading.Transformations"
+             xmlns:ffimageloadingsvg="clr-namespace:FFImageLoading.Svg.Forms;assembly=FFImageLoading.Svg.Forms"
              x:Class="PhantasmaMail.Views.SendView"
              BackgroundColor="{StaticResource WhiteBackground}">
 
@@ -40,6 +42,7 @@
                             <RowDefinition Height="Auto"/>
                             <RowDefinition Height="Auto"/>
                         </Grid.RowDefinitions>
+
                         <xfx:XfxEntry
                             Grid.Row="0"
                             HorizontalOptions="FillAndExpand"
@@ -47,6 +50,22 @@
                             FloatingHintEnabled="True"
                             Style="{StaticResource CustomEntryStyle}"
                             Text="{Binding ToAddress}" />
+
+                        <ffimageloadingsvg:SvgCachedImage Grid.Row="0"
+                                                          VerticalOptions="Start" 
+                                                          HorizontalOptions="End"
+                                                          Source="camera.svg"
+                                                          Grid.Column="0" HeightRequest="20"
+                                                          WidthRequest="20">
+                            <ffimageloadingsvg:SvgCachedImage.Transformations>
+                                <fftransformations:TintTransformation EnableSolidColor="true"
+                                                                      HexColor="{StaticResource TintIconColor}" />
+                            </ffimageloadingsvg:SvgCachedImage.Transformations>
+                            <ffimageloadingsvg:SvgCachedImage.GestureRecognizers>
+                                <!--<TapGestureRecognizer Command="{Binding ScanQRCommand}"/>-->
+                                <TapGestureRecognizer Tapped="TapGestureRecognizer_OnTapped"></TapGestureRecognizer>
+                            </ffimageloadingsvg:SvgCachedImage.GestureRecognizers>
+                        </ffimageloadingsvg:SvgCachedImage>
 
                         <Picker TextColor="Black" Grid.Row="1" Margin="0,-15,0,0" 
                                 FontFamily="{StaticResource OpenSansSemiBold}"
