--- a/PhantasmaMail/PhantasmaMail/Controls/WalletAssetCell.xaml
+++ b/PhantasmaMail/PhantasmaMail/Controls/WalletAssetCell.xaml
@@ -7,56 +7,56 @@
       x:Class="PhantasmaMail.Controls.WalletAssetCell"
       x:Key="WalletAssetCell"
       BackgroundColor="Transparent">
+    <Grid HorizontalOptions="FillAndExpand">
 
-    <Frame Grid.Column="0" 
-           Margin="0" 
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="40"/>
+            <ColumnDefinition Width="*"/>
+        </Grid.ColumnDefinitions>
+
+        <Frame Grid.Column="1" 
+           Margin="-25,0,0,0" 
            Padding="0"
-           CornerRadius="1" 
+               HorizontalOptions="FillAndExpand"
+           CornerRadius="1"         
            HasShadow="True" 
            BackgroundColor="White">
+            <Grid>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
+                </Grid.RowDefinitions>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="1*"/>
+                    <ColumnDefinition Width="1*"/>
+                </Grid.ColumnDefinitions>
 
-        <Grid>
-            <Grid.RowDefinitions>
-                <RowDefinition Height="Auto"/>
-                <RowDefinition Height="Auto"/>
-            </Grid.RowDefinitions>
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="Auto"/>
-                <ColumnDefinition Width="1*"/>
-                <ColumnDefinition Width="1*"/>
-            </Grid.ColumnDefinitions>
+                <Label Grid.Row="0" Grid.Column="0" HorizontalTextAlignment="Start" Margin="30,5,5,0"
+                       Text="{Binding TokenDetails.Name}"/>
 
-            <ffimageloading:CachedImage Grid.Column="0"
-                                        Margin="5"
-                                        Grid.Row="0"
-                                        Grid.RowSpan="2"
-                                        HorizontalOptions="Center"
-                                        VerticalOptions="Center"
-                                        Source="{Binding ImagePath}"
-                                        WidthRequest="35"
-                                        HeightRequest="35"
-                                        Aspect="AspectFill">
-                <ffimageloading:CachedImage.Transformations>
-                    <transformations:CircleTransformation  BorderHexColor="#17566B" BorderSize="4"/>
-                </ffimageloading:CachedImage.Transformations>
-            </ffimageloading:CachedImage>
+                <Label Grid.Row="0" Grid.Column="1" HorizontalTextAlignment="End"  Margin="5,5,10,0"
+                       Text="{Binding FiatValue}"/>
 
-            <Label Grid.Row="0" Grid.Column="1" HorizontalTextAlignment="Start" Margin="10,5,5,0"
-                   Text="{Binding TokenDetails.Name}"/>
+                <Label Grid.Row="1" Grid.Column="0" HorizontalTextAlignment="Start" Margin="30,5,5,5"
+                       Text="{Binding Amount}"/>
 
-            <Label Grid.Row="0" Grid.Column="2" HorizontalTextAlignment="End"  Margin="5,5,10,0"
-                   Text="{Binding FiatValue}"/>
+                <Label Grid.Row="1" Grid.Column="1" HorizontalTextAlignment="End" Margin="5,5,10,5"
+                       Text="{Binding FiatChange}"/>
 
-            <Label Grid.Row="1" Grid.Column="1" HorizontalTextAlignment="Start" Margin="10,5,5,5"
-                   Text="{Binding Amount}"/>
+            </Grid>
+        </Frame>
 
-            <Label Grid.Row="1" Grid.Column="2" HorizontalTextAlignment="End" Margin="5,5,10,5"
-                   Text="{Binding FiatChange}"/>
-
-        </Grid>
-    </Frame>
-
-
-
-
+    </Grid>
+    <ffimageloading:CachedImage Grid.Column="0"
+                                Margin="5"
+                                HorizontalOptions="Start"
+                                VerticalOptions="Center"
+                                Source="{Binding ImagePath}"
+                                WidthRequest="35"
+                                HeightRequest="35"
+                                Aspect="AspectFill">
+        <!--<ffimageloading:CachedImage.Transformations>
+            <transformations:CircleTransformation  BorderHexColor="#17566B" BorderSize="4"/>
+        </ffimageloading:CachedImage.Transformations>-->
+    </ffimageloading:CachedImage>
 </Grid>
