--- a/PhantasmaMail/PhantasmaMail/Controls/WalletAssetCell.xaml
+++ b/PhantasmaMail/PhantasmaMail/Controls/WalletAssetCell.xaml
@@ -7,6 +7,18 @@
       x:Class="PhantasmaMail.Controls.WalletAssetCell"
       x:Key="WalletAssetCell"
       BackgroundColor="Transparent">
+    <Grid.Resources>
+        <ResourceDictionary>
+
+            <Style x:Key="WalletAssetLabelStyle" BasedOn="{StaticResource OpenSansSemiBoldLabelStyle}"
+                   TargetType="Label">
+                <Setter Property="TextColor" Value="Black" />
+                <Setter Property="FontSize"
+                        Value="{StaticResource MediumSize}" />
+            </Style>
+
+        </ResourceDictionary>
+    </Grid.Resources>
     <Grid HorizontalOptions="FillAndExpand">
 
         <Grid.ColumnDefinitions>
@@ -27,21 +39,29 @@
                     <RowDefinition Height="Auto"/>
                 </Grid.RowDefinitions>
                 <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="1*"/>
-                    <ColumnDefinition Width="1*"/>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="Auto"/>
                 </Grid.ColumnDefinitions>
 
                 <Label Grid.Row="0" Grid.Column="0" HorizontalTextAlignment="Start" Margin="30,5,5,0"
-                       Text="{Binding TokenDetails.Name}"/>
+                       Text="{Binding TokenDetails.Name}"
+                       Style="{StaticResource WalletAssetLabelStyle}"/>
 
                 <Label Grid.Row="0" Grid.Column="1" HorizontalTextAlignment="End"  Margin="5,5,10,0"
-                       Text="{Binding FiatValue}"/>
+                       Text="{Binding FiatValue, Converter={StaticResource FiatValueToStringConverter}}"
+                       Style="{StaticResource WalletAssetLabelStyle}"/>
 
-                <Label Grid.Row="1" Grid.Column="0" HorizontalTextAlignment="Start" Margin="30,5,5,5"
-                       Text="{Binding Amount}"/>
+                <Label Grid.Row="1" Grid.Column="0" HorizontalTextAlignment="Start" Margin="30,0,5,5"
+                       Text="{Binding ., Converter={StaticResource AssetAmountSymbolToStringConverter}}"
+                       Style="{StaticResource WalletAssetLabelStyle}"
+                       TextColor="{StaticResource LightGray}"/>
 
-                <Label Grid.Row="1" Grid.Column="1" HorizontalTextAlignment="End" Margin="5,5,10,5"
-                       Text="{Binding FiatChange}"/>
+                <Label Grid.Row="1" Grid.Column="1" HorizontalTextAlignment="End" Margin="5,0,10,5"
+                       Text="{Binding FiatChangePercentage, StringFormat='{0}%'}"
+                       x:Name="FiatChangePercentageLabel"
+                       FontFamily="{StaticResource OpenSansSemiBold}"
+                       FontSize="{StaticResource MidMediumSize}"
+                       TextColor="{Binding Source={x:Reference FiatChangePercentageLabel}, Path=Text, Converter={StaticResource ValueToColorConverter}}"/>
 
             </Grid>
         </Frame>
