Applied change RPC server in all api calls Message Detail now show the correct local time InboxList and SentList also have the correct local time

--- a/PhantasmaMail/PhantasmaMail/App.xaml
+++ b/PhantasmaMail/PhantasmaMail/App.xaml
@@ -39,6 +39,7 @@
             <converters:AssetAmountSymbolToStringConverter x:Key="AssetAmountSymbolToStringConverter"/>
             <converters:ValueToColorConverter x:Key="ValueToColorConverter"/>
             <converters:AssetValueChangeToIconConverter x:Key="AssetValueChangeToIconConverter"/>
+            <converters:UtcToLocalTimeConverter x:Key="UtcToLocalTimeConverter"/>
 
             <!-- FONTS -->
 
