--- a/PhantasmaMail/PhantasmaMail/Views/ExtendedSplashView.xaml
+++ b/PhantasmaMail/PhantasmaMail/Views/ExtendedSplashView.xaml
@@ -6,7 +6,7 @@
     xmlns:ffimageloading="clr-namespace:FFImageLoading.Forms;assembly=FFImageLoading.Forms">
     <ContentPage.Content>
         <Grid>
-            <ffimageloading:CachedImage Aspect="AspectFill" Source="Splash_screen.ong">
+            <ffimageloading:CachedImage Aspect="AspectFill" Source="Splash_screen.png">
 
             </ffimageloading:CachedImage>
         </Grid>
