--- a/PhantasmaMail/PhantasmaMail/Views/MenuView.xaml
+++ b/PhantasmaMail/PhantasmaMail/Views/MenuView.xaml
@@ -69,7 +69,7 @@
             </ListView>
 
             <!-- Logout -->
-            <Grid Grid.Row="1" HorizontalOptions="End" VerticalOptions="End" Margin="10,0" IsVisible="True" BackgroundColor="Transparent">
+            <Grid Grid.Row="1" HorizontalOptions="Start" VerticalOptions="End" Margin="30,0" IsVisible="True" BackgroundColor="Transparent">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="Auto" />
                     <ColumnDefinition Width="*" />
