--- a/PhantasmaMail/PhantasmaMail/Controls/InboxMessageCell.xaml
+++ b/PhantasmaMail/PhantasmaMail/Controls/InboxMessageCell.xaml
@@ -7,8 +7,8 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:controls="clr-namespace:PhantasmaMail.Controls;assembly=PhantasmaMail"
     x:Key="InboxMessageCell">
-    <controls:CustomFrame Margin="20,10" CornerRadius="0" HasShadow="True" x:Name="customFrame">
-        <Grid RowSpacing="7" ColumnSpacing="0" Margin="3,3">
+    <controls:CustomFrame x:Name="customFrame">
+        <Grid RowSpacing="7" ColumnSpacing="0" Margin="20,10">
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto" />
                 <RowDefinition Height="Auto" />
